# VisionInfer

./: README.md  pyproject.toml
vinfer/: __init__.py  frame_producer.py  input_listener.py  main.py  utils.py
vinfer/backend/: ollama_manager.py
vinfer/camera/: rtsp_camera.py  usb_camera.py
