[build-system]
requires = ["setuptools>=68.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "vinfer"
version = "0.2.0"
authors = [{name = "ZhangJianian"}]
description = "Lightweight VLM Inference Tool for Jetson/ARM (supports RTSP/USB/VOD)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vlm", "video", "inference", "vision-language-model", "jetson"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.24.0,<=1.26.4",
  "psutil>=5.9.0",
  "ollama>=0.1.0"
]

[project.optional-dependencies]
full = ["opencv-python>=4.8.0"]

[project.urls]
Homepage = "https://github.com/iloveyou-github/VisionInfer"
Repository = "https://github.com/iloveyou-github/VisionInfer"
Issues = "https://github.com/iloveyou-github/VisionInfer/issues"

[project.scripts]
vinfer = "vinfer.main:main"
