[build-system]
requires = ["setuptools>=68.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "vinfer"
version = "0.2.1"
authors = [{name = "ZhangJianian"}]
description = "Lightweight VLM Inference Tool for Jetson/ARM (supports RTSP/USB/VOD)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["vlm", "video", "inference", "vision-language-model", "jetson"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.24.0,<=1.26.4",
  "psutil>=5.9.0",
  "ollama>=0.1.0"
]

[project.optional-dependencies]
full = ["ultralytics>=8.4.0"]


[project.urls]
Homepage = "https://github.com/machinefi/VisionInfer"
Repository = "https://github.com/machinefi/VisionInfer"
Issues = "https://github.com/machinefi/VisionInferde/issues"

[project.scripts]
vinfer = "vinfer.main:main"
